@startuml

enum FileFormats{
    DOCX
    MP3
    PNG
    AVI

+getContentType():String
}


class DimensionsStore {
-width:int
-height:int
+toString():String
+get...()
+set...()
}

class DurationStore{
-hours : int
-minutes : int
-seconds : int
+toString() : String
}

class AbstractFile {
 -filename : String
 -sizeInBytes : int
 -formatId : FileFormats
 +abstract void printItem()
 +static void printCollection(AbstractFile[] files)
 +get...()
 +set...()
}

class DocumentFile{
-numberOfPages: int
+get...()
+set...()
}

class ImageFile{
 -imageDimensions: DimensionsStore
+get...()
+set...()
}

class MultimediaFile{
-contentDescription: String
-duration: DurationStore;
+get...()
+set...()
}

class VideoFile{
-thumbPicDimension: DimensionsStore
+get...()
+set...()
}

AbstractFile --> FileFormats

DocumentFile --|> AbstractFile

ImageFile --|> AbstractFile
ImageFile --> DimensionsStore

MultimediaFile --|> AbstractFile
MultimediaFile --> DurationStore

VideoFile --|> MultimediaFile
VideoFile --> DimensionsStore


@enduml